<resources>
    <string name="app_name">e-Nyelam</string>
    <string name="recommended_for_you">RECOMMENDED FOR YOU</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="coming_soon">Coming soon</string>
    <string name="home">Home</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_hint">Password *</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="or">or</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="reset">Reset</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="full_name">Full Name</string>
    <string name="full_name_hint">Full Name *</string>
    <string name="customer_name">Customer Name</string>
    <string name="first_name">First Name</string>
    <string name="first_name_hint">First Name *</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">E-mail Address</string>
    <string name="email_address_hint">E-mail Address *</string>
    <string name="birth_place_hint">Birth Place</string>
    <string name="certificate_number_hint">Certificate Number</string>
    <string name="certificate_date_hint">Certificate Date</string>
    <string name="birth_date_hint">Birth Date</string>
    <string name="country_hint">Country</string>
    <string name="nationality_hint">Nationality</string>
    <string name="language">Language</string>
    <string name="language_hint">Language</string>
    <string name="organization">Organization</string>
    <string name="organization_hint">Organization</string>
    <string name="license_type">License Type</string>
    <string name="license_type_hint">License Type</string>
    <string name="gender_hint">Gender</string>
    <string name="title">Title</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_number_hint">Phone Number *</string>
    <string name="phone_number_ex">Phone number (eg. +905...)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_password_hint">Confirm Password *</string>
    <string name="current_password">Current Password</string>
    <string name="current_password_hint">Current Password *</string>
    <string name="new_password">New Password</string>
    <string name="new_password_hint">New Password *</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="confirm_new_password_hint">Confirm New Password *</string>
    <string name="select_gender">Select Gender</string>
    <string name="loading">Please wait...</string>
    <string name="events">Events</string>
    <string name="hot_offer">Hot Offer</string>
    <string name="most_popular_dive_spot">Most Popular Dive Spot</string>
    <string name="see_all">See All</string>
    <string name="country">Country</string>
    <string name="dive_service">Dive Service</string>
    <string name="choose_province">Select Province</string>
    <string name="province">Province</string>
    <string name="courier">Courier</string>
    <string name="select_courier">Select Courier</string>
    <string name="service_types">Service Types</string>
    <string name="service">Service</string>
    <string name="select_service">Select Service</string>
    <string name="city">City</string>
    <string name="choose_city">Select City</string>
    <string name="district">District</string>
    <string name="choose_district">Select District</string>
    <string name="area">Area</string>
    <string name="save">Save</string>
    <string name="change">Change</string>
    <string name="fill_in">Fill in</string>
    <string name="filter">Filter</string>
    <string name="change_password">Change Password</string>
    <string name="next">Next</string>
    <string name="bank_transfer">Bank Transfer</string>
    <string name="bank_transfer_label">Pay from ATM Transfer</string>
    <string name="paypal">Paypal</string>
    <string name="paypal_label">Pay using Paypal payment gateway</string>
    <string name="virtual_account_or_credit_card">Virtual Account/Credit Card</string>
    <string name="virtual_account_or_credit_card_label">Pay using Midtrans payment gateway</string>
    <string name="virtual_account">Virtual Account</string>
    <string name="virtual_account_label">Pay using Virtual Account</string>
    <string name="pay_with_midtrans">Pay using Midtrans payments gateway</string>
    <string name="credit_card">Credit Card</string>
    <string name="credit_card_label">Pay using Credit Card</string>
    <string name="open_map">Open Map</string>
    <string name="book_eco_trip">Book Your Eco-Trip</string>
    <string name="book_eco_trip_now">Book Your Eco-Trip Now</string>
    <string name="lorem_ipsum_dolor">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="order">Order</string>
    <string name="fill_out_the_form">Fill out the form</string>
    <string name="service_name">Service Name</string>
    <string name="location">Location</string>
    <string name="sub_total">Sub Total</string>
    <string name="voucher">Voucher</string>
    <string name="total">Total</string>
    <string name="total_price">Total Price </string>
    <string name="admin_fee">Admin Fee</string>
    <string name="service_fee">Service fee</string>
    <string name="check_your_booking">Check your booking is write correctly</string>
    <string name="review_your_booking">Review and  fill a detailed booking</string>
    <string name="your_booking">Your Booking</string>
    <string name="your_booking_id">Your Booking ID : </string>
    <string name="your_order_id">Your Order ID : </string>
    <string name="booking_summary">Booking Summary</string>
    <string name="payment">Payment</string>
    <string name="transfer_to">Transfer To BANK MANDIRI</string>
    <string name="bank_branch">Citra Grand Bekasi Branch</string>
    <string name="account_number_label">Account Number</string>
    <string name="account_number">070-000-971-3921</string>
    <string name="account_name_label">Account Name</string>
    <string name="account_name">Wimiku Indo Digital</string>
    <string name="contact_details">Contact Details</string>
    <string name="participants">Participants</string>
    <string name="participant_details">Participant Details</string>
    <string name="booking_details">Booking Details</string>
    <string name="price_details">Price Details</string>
    <string name="payment_method">Payment Method</string>
    <string name="payment_options">Payment Options</string>
    <string name="choose_file">Choose File</string>
    <string name="confirm">Confirm</string>
    <string name="pay_now">Pay Now</string>
    <string name="book_now">Book Now</string>
    <string name="review">Review</string>
    <string name="your_review">Your Review</string>
    <string name="review_hint">Write your review here..</string>
    <string name="send">Send</string>
    <string name="apply">Apply</string>
    <string name="insert_voucher">Insert your voucher here</string>
    <string name="add_to_basket">Add To Basket</string>
    <string name="enter_a_dive_spot">Enter a dive spot name</string>
    <string name="enter_keywords">Enter keywords..</string>
    <string name="keyword">Keyword</string>
    <string name="dive_spot">Dive Spot</string>
    <string name="certificate">Certificate</string>
    <string name="diving_license">Diving License</string>
    <string name="dive_center">Dive Center</string>
    <string name="who_we_are">Who We Are</string>
    <string name="our_trips_services">Our Trips Services</string>
    <string name="date">Date</string>
    <string name="diver">Diver</string>
    <string name="slot_divers">Available Slots</string>
    <string name="search">Search</string>
    <string name="dive_now">Dive Now</string>
    <string name="trip_now">Trip Now</string>
    <string name="get_certified_now">Get Certified Now</string>
    <string name="recent_searches">Recent searches</string>
    <string name="search_results">Search results</string>
    <string name="warn_server_error">Internal Server Error</string>
    <string name="warn_no_results_found">No results found.</string>
    <string name="warn_no_purchase_available">Sorry, No Purchase Available</string>
    <string name="warn_no_reviews_found">No reviews found.</string>
    <string name="warn_no_services_found">No services found.</string>
    <string name="warn_no_location_found">No location found.</string>
    <string name="forgot_password_message">Click OK to recover your password</string>
    <string name="warn_field_title_cannot_be_empty">Title cannot be empty</string>
    <string name="warn_field_name_cannot_be_empty">Name cannot be empty</string>
    <string name="warn_field_first_name_cannot_be_empty">First name cannot be empty</string>
    <string name="warn_field_username_cannot_be_empty">Username cannot be empty</string>
    <string name="warn_email_not_valid">Please, input valid email address</string>
    <string name="warn_file_not_found">Please, upload image first !</string>
    <string name="warn_empty_keyword">Keyword cannot be empty</string>
    <string name="warn_empty_association">Please, choose association</string>
    <string name="warn_empty_license_type">Please, choose license type</string>
    <string name="warn_empty_license_type_list">License type is empty</string>
    <string name="warn_empty_schedule">Please, choose schedule</string>
    <string name="warn_total_diver">Please, choose total Diver</string>
    <string name="warn_schedule_not_available">No times are available on this service</string>
    <string name="warn_field_email_cannot_be_empty">Email cannot be empty</string>
    <string name="warn_field_phone_cannot_be_empty">Phone number cannot be empty</string>
    <string name="warn_field_address_cannot_be_empty">Address cannot be empty</string>
    <string name="warn_field_password_cannot_be_empty">Password cannot be empty</string>
    <string name="warn_field_confirm_password_didnt_match">Password and confirm password didn\'t match</string>
    <string name="warn_field_confirm_password_cannot_be_empty">Confirm password cannot be empty</string>
    <string name="warn_field_contact_details_cannot_be_empty">Contact Details cannot be Empty</string>
    <string name="warn_field_participant_details_cannot_be_empty">Participant Details cannot be Empty</string>
    <string name="warn_field_password_length">Password length must be 6 characters or more</string>
    <string name="warn_paymet_using_paypal_failed">Payment failed, please try to re-order or using another payment method</string>
    <string name="warn_field_current_password_cannot_be_empty">Current password cannot be empty</string>
    <string name="warn_field_new_password_cannot_be_empty">New password cannot be empty</string>
    <string name="warn_field_confirm_new_password_cannot_be_empty">Confirm password cannot be empty</string>
    <string name="warn_field_confirm_new_password_didnt_macth">New password and confirm password didn\'t match</string>
    <string name="fb_auth_failed">Facebook authentication failed. Please try again later.</string>
    <string name="gp_auth_failed">Google authentication failed. Please try again later.</string>
    <string name="warn_check_agreement_to_continue">Please read carefully and check the agreement to continue</string>
    <string name="warn_cancel_booking">"Are you sure want to cancel your bookings? Any changes to your bookings will be lost."</string>
    <string name="warn_logout">Are you sure want to sign out ?</string>
</resources>