<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.nyelam.android.booking.BookingServiceActivity">

    <LinearLayout
        android:orientation="vertical"
        android:background="@color/colorGradationLeft"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:textColor="@color/colorWhite"
                    android:background="@android:color/transparent"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/booking_details"/>

                <!--<ImageView
                    android:id="@+id/menu_item_imageView"
                    android:src="@drawable/ic_action_menu_item"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />-->
            </RelativeLayout>
        </android.support.v7.widget.Toolbar>

        <RelativeLayout
            android:visibility="gone"
            android:padding="@dimen/padding"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/book_layout"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:text="1"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorGradationLeft"
                    android:gravity="center"
                    android:background="@drawable/ny_circle_white"
                    android:layout_width="24dp"
                    android:layout_height="24dp" />
                <TextView
                    android:text="Pesan"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorWhite"
                    android:gravity="center"
                    android:layout_marginLeft="@dimen/padding"
                    android:layout_marginStart="@dimen/padding"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_toRightOf="@+id/book_layout"
                android:layout_toEndOf="@+id/book_layout"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="@dimen/padding"
                android:layout_marginStart="@dimen/padding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <View
                    android:background="#89f5f5f5"
                    android:layout_marginRight="@dimen/padding"
                    android:layout_marginEnd="@dimen/padding"
                    android:layout_width="16dp"
                    android:layout_height="1dp" />
                <TextView
                    android:text="2"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorGradationLeft"
                    android:gravity="center"
                    android:background="@drawable/ny_circle_blue_transparant"
                    android:layout_width="24dp"
                    android:layout_height="24dp" />
                <TextView
                    android:text="Bayar"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="#89f5f5f5"
                    android:gravity="center"
                    android:layout_marginLeft="@dimen/padding"
                    android:layout_marginStart="@dimen/padding"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#1286ec"
                android:gravity="center"
                android:padding="@dimen/padding"
                android:text="@string/review_your_booking"
                android:textColor="@color/colorWhite" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/ny_grey3"
                android:padding="@dimen/padding"
                android:text="@string/your_booking"
                android:textColor="@color/ny_black1"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:orientation="vertical"
                android:padding="@dimen/padding">

                <TextView
                    android:id="@+id/schedule_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textColor="@color/ny_black1"
                    android:textStyle="bold" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/service_name_textView"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:layout_marginTop="@dimen/padding"
                        android:text="@string/service_name"
                        android:textColor="@color/ny_black1" />
                </LinearLayout>

                <TextView
                    android:id="@+id/location_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding"
                    android:text="@string/location"
                    android:textSize="15sp"
                    android:textColor="@color/ny_grey4" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:visibility="gone"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/padding"
                        android:text="@string/participants"
                        android:textSize="14sp"
                        android:textColor="@color/ny_grey4" />
                    <TextView
                        android:id="@+id/detail_price_textView"
                        android:gravity="right|end"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/padding"
                        android:layout_marginLeft="@dimen/padding"
                        android:layout_marginStart="@dimen/padding"
                        android:textSize="14sp"
                        android:text="0 x @ Rp 0"
                        android:textColor="@color/ny_orange" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/padding"
                        android:text="@string/sub_total"
                        android:textSize="14sp"
                        android:textColor="@color/ny_grey4" />
                    <TextView
                        android:id="@+id/sub_total_price_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/padding"
                        android:layout_marginLeft="@dimen/padding"
                        android:layout_marginStart="@dimen/padding"
                        android:textSize="14sp"
                        android:text="Rp 0"
                        android:textColor="@color/ny_orange" />
                </LinearLayout>


                <LinearLayout
                    android:visibility="gone"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:layout_marginTop="@dimen/padding"
                        android:text="@string/voucher"
                        android:textColor="@color/ny_grey4" />
                    <TextView
                        android:id="@+id/voucher_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/padding"
                        android:layout_marginLeft="@dimen/padding"
                        android:layout_marginStart="@dimen/padding"
                        android:textSize="14sp"
                        android:text="Rp 0"
                        android:textColor="@color/ny_orange" />
                </LinearLayout>


                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:layout_marginTop="@dimen/padding"
                        android:text="@string/total_price"
                        android:textColor="@color/ny_grey4" />
                    <TextView
                        android:id="@+id/total_price_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/padding"
                        android:layout_marginLeft="@dimen/padding"
                        android:layout_marginStart="@dimen/padding"
                        android:textSize="14sp"
                        android:text="Rp 0"
                        android:textColor="@color/ny_orange" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/ny_grey3"
                android:padding="@dimen/padding"
                android:text="@string/contact_details"
                android:textColor="@color/ny_black1"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:orientation="vertical"
                android:padding="@dimen/padding">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/contact_name_textView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/full_name"
                        android:textColor="@color/ny_grey4"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/change_contact_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/change"
                        android:textAllCaps="true"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/phone_number"
                        android:textColor="@color/ny_grey4"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/contact_phone_number_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="-"
                        android:textColor="@color/ny_black1"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/email"
                        android:textColor="@color/ny_grey4"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/contact_email_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="example@mail.com"
                        android:textColor="@color/ny_black1"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/ny_grey3"
                android:padding="@dimen/padding"
                android:text="@string/participants_detail"
                android:textColor="@color/ny_black1"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/participant_container_linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding"/>


            <LinearLayout
                android:id="@+id/next_linearLayout"
                android:background="@drawable/ny_rectangle_blue"
                android:gravity="center"
                android:layout_gravity="center"
                android:paddingLeft="100dp"
                android:paddingRight="100dp"
                android:layout_marginTop="@dimen/padding_double"
                android:layout_marginBottom="@dimen/padding_double"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/next"
                    android:textSize="14sp"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:textColor="@color/colorWhite"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:padding="@dimen/padding"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</LinearLayout>
