<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    tools:context="com.nyelam.android.dodive.DoDiveActivity">

    <LinearLayout
        android:orientation="vertical"
        android:background="@drawable/ny_gradient_right_left"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="horizontal"
            android:padding="@dimen/padding"
            android:background="@drawable/ny_rectangle_white"
            android:gravity="center_vertical"
            android:layout_margin="@dimen/padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/ic_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/search_editText"
                android:hint="@string/enter_a_dive_spot"
                android:textSize="14sp"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/ny_grey4"
                android:background="@android:color/transparent"
                android:singleLine="true"
                android:maxLines="1"
                android:layout_marginLeft="@dimen/padding_double"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/label_textView"
        android:text="@string/recent_searches"
        android:textColor="@color/ny_black1"
        android:textSize="15sp"
        android:textStyle="bold"
        android:letterSpacing="0.05"
        android:gravity="left|start"
        android:layout_marginTop="@dimen/padding"
        android:layout_marginBottom="@dimen/padding"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:background="@color/ny_grey2"
        android:layout_width="match_parent"
        android:layout_height="0.3dp"/>

    <!--<ScrollView-->
        <!--android:background="@color/colorWhite"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent">-->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!--<include layout="@layout/view_item_search"/>
            <include layout="@layout/view_item_search"/>-->

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:nestedScrollingEnabled="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </android.support.v7.widget.RecyclerView>

            <TextView
                android:id="@+id/no_result_textView"

                android:text="@string/warn_no_results_found"
                android:textSize="18sp"
                android:textColor="@color/ny_black1"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="@dimen/padding_double"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    <!--</ScrollView>-->


</LinearLayout>
